# readwise-to-datasette

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_publish.yml  repo-sync.yml
readwise_to_datasette/: __init__.py
