[tool.poetry]
name = "readwise-to-datasette"
version = "0.1.0"
description = "Extract readwise highlights into a datasette sqlite DB"
authors = ["Michael Bianco <iloveitaly@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
readwise = "^1.1.0"
sqlite-utils = "^3.36"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pyright = "^1.1.342"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
readwise-to-datasette = "readwise_to_datasette:main"
