[tool.poetry]
name = "readwise-to-datasette"
version = "0.2.0"
description = "Extract readwise highlights into a datasette sqlite DB"
authors = ["Michael Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "README.md"
keywords = ["readwise", "datasette"]
homepage = "https://github.com/iloveitaly/readwise-to-datasette"

[tool.poetry.dependencies]
python = "^3.12"
sqlite-utils = "^3.37"
click = "^8.1.7"
funcy-pipe = "^0.11.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = ">=24.4.2,<26.0.0"
isort = "^5.13.2"
pyright = "^1.1.373"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
readwise-to-datasette = "readwise_to_datasette:main"
